syntax = "proto3";

option java_package = "com.projectlab.core.domain.proto";
option java_multiple_files = true;

message UserSession {
    string user_id = 1;
}
